[metadata]
name = streamlit_topic_modeling
version = attr:streamlit_topic_modeling.__version__
description = A topic modeling GUI application using Streamlit.
description-file = README.md
long_description = file:README.md
long_description_content_type = text/markdown
author = Bryan Patrick Wood
author_email = bpw1621@gmail.com
url = 'https://github.com/bpw1621/streamlit_topic_modeling'
download_url = https://github.com/bpw1621/streamlit_topic_modeling/archive/master.zip
project_urls =
    Homepage = https://bpw1621.github.io/streamlit_topic_modeling
    Source Code = https://github.com/bpw1621/streamlit_topic_modeling
    Documentation = https://streamlit_topic_modeling.readthedocs.io/en/latest/
    Bug Tracker = https://github.com/bpw1621/streamlit_topic_modeling/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only

;keywords = ...
;license = ...

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    gensim
    matplotlib
    nltk
    numpy
    pandas
    plotly-express
    plotly
    pyldavis
    regex
    scikit-learn
    seaborn
    streamlit
    umap-learn
    wordcloud
tests_require =
    pytest
    pytest-mock
    pytest-cov
setup_requires =
    setuptools
    pytest-runner

[bdist_wheel]
universal = true

[options.extras_require]
dev =
    flake8
    tox
    pretty_errors
    twine
doc =
    sphinx
    sphinx_rtd_theme
    towncrier

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']